5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1679_1872.log
== SUBMITION (2019-04-25 16:59:01) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
r = float(input("Digite sua renda: "))
f1 = 1903.98
f2 = 2826.65
f3 = 3751.05
f4 = 4664.68
if (r <= f1):
imp = 0.0
elif (r <= f2):
imp = 0.075*(r-f1)
elif (r <= f3):
imp = 0.075*(f2-f1) + 0.15*(r-f2)
elif (r <= f4):
imp = 0.075*(f2-f1) + 0.15*(f3-f2) + 0.225*(r-f3)
else:
imp = 0.075*(f2-f1)+0.15*(f3-f2)+0.225*(f4-f3)+0.275*(r-f4)
print(round(imp, 2))
-- EXECUTION TIME:
0.139863
-- ERROR:
  File "/home/codebench/codes/1679/1872/main.py", line 8
    imp = 0.0
      ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:59:12) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
r = float(input("Digite sua renda: "))
f1 = 1903.98
f2 = 2826.65
f3 = 3751.05
f4 = 4664.68
if (r <= f1):
imp = 0.0
elif (r <= f2):
imp = 0.075*(r-f1)
elif (r <= f3):
imp = 0.075*(f2-f1) + 0.15*(r-f2)
elif (r <= f4):
imp = 0.075*(f2-f1) + 0.15*(f3-f2) + 0.225*(r-f3)
else:
imp = 0.075*(f2-f1)+0.15*(f3-f2)+0.225*(f4-f3)+0.275*(r-f4)
print(round(imp, 2))
-- ERROR:
File "XXXX", line 8
    imp = 0.0
      ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:59:48) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
r = float(input("Digite sua renda: "))
f1 = 1903.98
f2 = 2826.65
f3 = 3751.05
f4 = 4664.68
if (r <= f1):
	imp = 0.0
elif (r <= f2):
	imp = 0.075*(r-f1)
elif (r <= f3):
	imp = 0.075*(f2-f1) + 0.15*(r-f2)
elif (r <= f4):
	imp = 0.075*(f2-f1) + 0.15*(f3-f2) + 0.225*(r-f3)
else:
	imp = 0.075*(f2-f1)+0.15*(f3-f2)+0.225*(f4-f3)+0.275*(r-f4)
print(round(imp, 2))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 17:30:59) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
r = float(input("Digite sua renda: "))
f1 = 1903.98
f2 = 2826.65
f3 = 3751.05
f4 = 4664.68
if (r <= f1):
	imp = 0.0
elif (r <= f2):
	imp = 0.075*(r-f1)
elif (r <= f3):
	imp = 0.075*(f2-f1) + 0.15*(r-f2)
elif (r <= f4):
	imp = 0.075*(f2-f1) + 0.15*(f3-f2) + 0.225*(r-f3)
else:
	imp = 0.075*(f2-f1)+0.15*(f3-f2)+0.225*(f4-f3)+0.275*(r-f4)
print(round(imp, 2))
-- EXECUTION TIME:
0.174988
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
0.0
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
0.0
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 17:31:30) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
r = float(input("Digite sua renda: "))
f1 = 1903.98
f2 = 2826.65
f3 = 3751.05
f4 = 4664.68
if (r <= f1):
	imp = 0.0
elif (r <= f2):
	imp = 0.075*(r-f1)
elif (r <= f3):
	imp = 0.075*(f2-f1) + 0.15*(r-f2)
elif (r <= f4):
	imp = 0.075*(f2-f1) + 0.15*(f3-f2) + 0.225*(r-f3)
else:
	imp = 0.075*(f2-f1)+0.15*(f3-f2)+0.225*(f4-f3)+0.275*(r-f4)
print(round(imp, 2))
-- EXECUTION TIME:
0.153625
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
0.0
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
0.0
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:44:37) 
-- CODE:
x=float(input('digite o valor de x: '))
y=float(input('digite o valor de y: '))

if(x>0) and (y>0):
	print("Q1")


-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:45:12) 
-- CODE:
x=float(input('digite o valor de x: '))
y=float(input('digite o valor de y: '))

if(x>0) and (y>0):
	print("Q1")
if(x>0) and (y<0):
	print("Q2")


-- OUTPUT:
Q2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:45:39) 
-- CODE:
x=float(input('digite o valor de x: '))
y=float(input('digite o valor de y: '))

if(x>0) and (y>0):
	print("Q1")
if(x>0) and (y<0):
	print("Q2")
if(x<0) and (y<0):
	print("Q3")


-- OUTPUT:
Q2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:46:10) 
-- CODE:
x=float(input('digite o valor de x: '))
y=float(input('digite o valor de y: '))

if(x>0) and (y>0):
	print("Q1")
if(x>0) and (y<0):
	print("Q2")
if(x<0) and (y<0):
	print("Q3")
if(x>0) and (y<0):
	print("Q4")


-- OUTPUT:
Q2
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:47:19) 
-- CODE:
x=float(input('digite o valor de x: '))
y=float(input('digite o valor de y: '))

if(x>0) and (y>0):
	print("Q1")
if(x<0) and (y>0):
	print("Q2")
if(x<0) and (y<0):
	print("Q3")
if(x>0) and (y<0):
	print("Q4")


-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:47:29) 
-- CODE:
x=float(input('digite o valor de x: '))
y=float(input('digite o valor de y: '))

if(x>0) and (y>0):
	print("Q1")
if(x<0) and (y>0):
	print("Q2")
if(x<0) and (y<0):
	print("Q3")
if(x>0) and (y<0):
	print("Q4")


-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:48:33) 
-- CODE:
x=float(input('digite o valor de x: '))
y=float(input('digite o valor de y: '))

if(x>0) and (y>0):
	print("Q1")
if(x<0) and (y>0):
	print("Q2")
if(x<0) and (y<0):
	print("Q3")
if(x>0) and (y<0):
	print("Q4")
if(x=0) and (y=0):
	print("Origem")




-- ERROR:
File "XXXX", line 12
    if(x=0) and (y=0):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:48:59) 
-- CODE:
x=float(input('digite o valor de x: '))
y=float(input('digite o valor de y: '))

if(x>0) and (y>0):
	print("Q1")
if(x<0) and (y>0):
	print("Q2")
if(x<0) and (y<0):
	print("Q3")
if(x>0) and (y<0):
	print("Q4")
if(x=0)and (y=0):
	print("Origem")




-- ERROR:
File "XXXX", line 12
    if(x=0)and (y=0):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:49:22) 
-- CODE:
x=float(input('digite o valor de x: '))
y=float(input('digite o valor de y: '))

if(x>0) and (y>0):
	print("Q1")
if(x<0) and (y>0):
	print("Q2")
if(x<0) and (y<0):
	print("Q3")
if(x>0) and (y<0):
	print("Q4")
if (x= 0) and (y = 0):
	print("Origem")




-- ERROR:
File "XXXX", line 12
    if (x= 0) and (y = 0):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:49:38) 
-- CODE:
x=float(input('digite o valor de x: '))
y=float(input('digite o valor de y: '))

if(x>0) and (y>0):
	print("Q1")
if(x<0) and (y>0):
	print("Q2")
if(x<0) and (y<0):
	print("Q3")
if(x>0) and (y<0):
	print("Q4")
if(x =0) and (y=0):
	print("Origem")




-- ERROR:
File "XXXX", line 12
    if(x =0) and (y=0):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:50:07) 
-- CODE:
x=float(input('digite o valor de x: '))
y=float(input('digite o valor de y: '))

if(x>0) and (y>0):
	print("Q1")
elif(x<0) and (y>0):
	print("Q2")
elif(x<0) and (y<0):
	print("Q3")
elif(x>0) and (y<0):
	print("Q4")
elif(x =0) and (y=0):
	print("Origem")




-- ERROR:
File "XXXX", line 12
    elif(x =0) and (y=0):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:51:21) 
-- CODE:
x=float(input('digite o valor de x: '))
y=float(input('digite o valor de y: '))

if(x>0) and (y>0):
	print("Q1")
elif(x<0) and (y>0):
	print("Q2")
elif(x<0) and (y<0):
	print("Q3")
elif(x>0) and (y<0):
	print("Q4")
elif x = 0 and y = 0:
	print('Origem')




-- ERROR:
File "XXXX", line 12
    elif x = 0 and y = 0:
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:51:33) 
-- CODE:
x=float(input('digite o valor de x: '))
y=float(input('digite o valor de y: '))

if(x>0) and (y>0):
	print("Q1")
elif(x<0) and (y>0):
	print("Q2")
elif(x<0) and (y<0):
	print("Q3")
elif(x>0) and (y<0):
	print("Q4")
elif x = 0 and y = 0:
	print('Origem')




-- ERROR:
File "XXXX", line 12
    elif x = 0 and y = 0:
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:51:53) 
-- CODE:
x=float(input('digite o valor de x: '))
y=float(input('digite o valor de y: '))

if(x>0) and (y>0):
	print("Q1")
	elif(x<0) and (y>0):
		print("Q2")
	elif(x<0) and (y<0):
		print("Q3")
	elif(x>0) and (y<0):
		print("Q4")
	elif x = 0 and y = 0:
		print('Origem')




-- ERROR:
File "XXXX", line 6
    elif(x<0) and (y>0):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:52:06) 
-- CODE:
x=float(input('digite o valor de x: '))
y=float(input('digite o valor de y: '))

if(x>0) and (y>0):
	print("Q1")
elif(x<0) and (y>0):
		print("Q2")
	elif(x<0) and (y<0):
		print("Q3")
	elif(x>0) and (y<0):
		print("Q4")
	elif x = 0 and y = 0:
		print('Origem')




-- ERROR:
File "XXXX", line 8
    elif(x<0) and (y<0):
                       ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:00:02) 
-- CODE:
x=float(input('digite o valor de x: '))
y=float(input('digite o valor de y: '))

if x = y = 0:
	print('Origem')
elif (x=0) and (y!=0):
	print('Eixo Y')
elif (y=0) and (x!=0):
	print('Eixo X')	
elif(x>0) and (y>0):
	print("Q1")
elif(x<0) and (y>0):
	print("Q2")
elif(x<0) and (y<0):
	print("Q3")
elif(x>0) and (y<0):
		print("Q4")
	elif x = y = 0:
		print('Origem')




-- ERROR:
File "XXXX", line 4
    if x = y = 0:
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:00:17) 
-- CODE:
x=float(input('digite o valor de x: '))
y=float(input('digite o valor de y: '))

if (x == y == 0:
	print('Origem')
elif (x=0) and (y!=0):
	print('Eixo Y')
elif (y=0) and (x!=0):
	print('Eixo X')	
elif(x>0) and (y>0):
	print("Q1")
elif(x<0) and (y>0):
	print("Q2")
elif(x<0) and (y<0):
	print("Q3")
elif(x>0) and (y<0):
		print("Q4")
	elif x = y = 0:
		print('Origem')




-- ERROR:
File "XXXX", line 4
    if (x == y == 0:
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:00:22) 
-- CODE:
x=float(input('digite o valor de x: '))
y=float(input('digite o valor de y: '))

if (x == y ==) 0:
	print('Origem')
elif (x=0) and (y!=0):
	print('Eixo Y')
elif (y=0) and (x!=0):
	print('Eixo X')	
elif(x>0) and (y>0):
	print("Q1")
elif(x<0) and (y>0):
	print("Q2")
elif(x<0) and (y<0):
	print("Q3")
elif(x>0) and (y<0):
		print("Q4")
	elif x = y = 0:
		print('Origem')




-- ERROR:
File "XXXX", line 4
    if (x == y ==) 0:
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:00:36) 
-- CODE:
x=float(input('digite o valor de x: '))
y=float(input('digite o valor de y: '))

if(x == y ==0):
	print('Origem')
elif (x=0) and (y!=0):
	print('Eixo Y')
elif (y=0) and (x!=0):
	print('Eixo X')	
elif(x>0) and (y>0):
	print("Q1")
elif(x<0) and (y>0):
	print("Q2")
elif(x<0) and (y<0):
	print("Q3")
elif(x>0) and (y<0):
		print("Q4")
	elif x = y = 0:
		print('Origem')




-- ERROR:
File "XXXX", line 6
    elif (x=0) and (y!=0):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:01:33) 
-- CODE:
x=float(input('digite o valor de x: '))
y=float(input('digite o valor de y: '))

if(x == y ==0):
	print('Origem')
elif(x = 0) and (y != 0):
	print('Eixo Y')
elif (y=0) and (x!=0):
	print('Eixo X')	
elif(x>0) and (y>0):
	print("Q1")
elif(x<0) and (y>0):
	print("Q2")
elif(x<0) and (y<0):
	print("Q3")
elif(x>0) and (y<0):
		print("Q4")
	elif x = y = 0:
		print('Origem')




-- ERROR:
File "XXXX", line 6
    elif(x = 0) and (y != 0):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:05:13) 
-- CODE:
x=float(input('digite o valor de x: '))
y=float(input('digite o valor de y: '))

if(x ==0) and (y== 0):
	print('Origem')

-- ERROR:
File "XXXX", line 6
    elif(x = 0) and (y != 0):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:34:22) 
-- CODE:
x=float(input('digite o valor de x: '))
y=float(input('digite o valor de y: '))

if(x == 0) and (y == 0):
	print('Origem')
elif(x = 0) and (y != 0):
	print('Eixo Y')
elif (y=0) and (x!=0):
	print('Eixo X')	
elif(x>0) and (y>0):
	print("Q1")
elif(x<0) and (y>0):
	print("Q2")
elif(x<0) and (y<0):
	print("Q3")
elif(x>0) and (y<0):
	print("Q4")




-- EXECUTION TIME:
0.145095
-- ERROR:
  File "/home/codebench/codes/1679/1872/main.py", line 6
    elif(x = 0) and (y != 0):
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:35:23) 
-- CODE:
x=float(input('digite o valor de x: '))
y=float(input('digite o valor de y: '))

if(x == 0) and (y == 0):
	print('Origem')
elif(x = 0) and (y != 0):
	print('Eixo Y')
elif (y=0) and (x!=0):
	print('Eixo X')	
elif(x>0) and (y>0):
	print("Q1")
elif(x<0) and (y>0):
	print("Q2")
elif(x<0) and (y<0):
	print("Q3")
elif(x>0) and (y<0):
	print("Q4")




-- ERROR:
File "XXXX", line 6
    elif(x = 0) and (y != 0):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:35:37) 
-- CODE:
x=float(input('digite o valor de x: '))
y=float(input('digite o valor de y: '))

if(x == 0) and (y == 0):
	print('Origem')
elif(x = 0) and (y != 0):
	print('Eixo Y')
elif (y=0) and (x!=0):
	print('Eixo X')	
elif(x>0) and (y>0):
	print("Q1")
elif(x<0) and (y>0):
	print("Q2")
elif(x<0) and (y<0):
	print("Q3")
elif(x>0) and (y<0):
	print("Q4")




-- ERROR:
File "XXXX", line 6
    elif(x = 0) and (y != 0):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:57:27) 
-- CODE:
x=float(input('digite o valor de x: '))
y=float(input('digite o valor de y: '))

if(x==0):
	if(y==0):
		print('origem')
	else:
		print('Eixo Y')
else:
	if(y==0 ):
		print('eixo x')
	else:
		if(x>0):
			if(y>0):
			else:
				print('Q4')
		else:
			if(y>0):
				print('q2')
			else:
				print('q3')
		
		
  



-- EXECUTION TIME:
0.141939
-- ERROR:
  File "/home/codebench/codes/1679/1872/main.py", line 15
    else:
       ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:59:22) 
-- CODE:
x=float(input('digite o valor de x: '))
y=float(input('digite o valor de y: '))

if(x==0):
	if(y==0):
		print('Origem')
	else:
		print('Eixo Y')
else:
	if(y==0 ):
		print('Eixo X')
	else:
		if(x>0):
			if(y>0):
				print('Q1')
			else:
				print('Q4')
		else:
			if(y>0):
				print('Q2')
			else:
				print('Q3')  



-- EXECUTION TIME:
0.153583
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
